# petmed

./: .dockerignore  .gitignore  Dockerfile  README.md  compose.yaml  deploy.sh  pyproject.toml
aidlc-docs/: aidlc-state.md  audit.md
aidlc-docs/construction/build-and-test/: build-and-test-summary.md  build-instructions.md  integration-test-instructions.md  performance-test-instructions.md  unit-test-instructions.md
aidlc-docs/construction/plans/: mcp-wiki-server-code-generation-plan.md  mcp-wiki-server-functional-design-plan.md
aidlc-docs/inception/plans/: execution-plan.md
aidlc-docs/inception/requirements/: requirement-verification-questions.md  (+2 more)
sample-docs/: petmed-overview.md
sample-docs/care/: nutrition.md  vaccination.md
src/mcp_wiki/: __init__.py  facilities.py  models.py  search.py  server.py  store.py
tests/: test_e2e.py  test_facilities.py  test_properties.py  test_search.py  test_store.py
wiki-docs/diseases/: cat-common-diseases.md  dog-common-diseases.md
wiki-docs/emergency/: toxic-foods.md
wiki-docs/grooming/: grooming-basics.md  skin-care.md
wiki-docs/lifecycle/: cat-life-stages.md  dog-life-stages.md
wiki-docs/nutrition/: feeding-basics.md  supplements.md  treats.md
wiki-docs/prevention/: dental-care.md  parasite-prevention.md
wiki-docs/seasonal/: seasonal-care.md  seasonal-foods.md
wiki-docs/symptoms/: appetite-loss.md  breathing-difficulty.md  itching.md  limping.md  seizures.md  skin-lesions.md  triage-guide.md  urinary-problems.md  vomiting-diarrhea.md
wiki-docs/vaccination/: cat-vaccination.md  dog-vaccination.md
(+4 files in other folders)
