[project]
name = "mcp-wiki-server"
version = "0.1.0"
description = "LLM wiki MCP server — search and read markdown documents over Streamable HTTP"
requires-python = ">=3.12"
dependencies = [
    "fastmcp>=2.0",
]

[project.scripts]
mcp-wiki-server = "mcp_wiki.server:main"

[dependency-groups]
dev = [
    "pytest>=8",
    "hypothesis>=6",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/mcp_wiki"]

[tool.pytest.ini_options]
testpaths = ["tests"]
